[workspace]
members = ["contracts/*"]
resolver = "2"

[profile.release.package.nois-protocol]
codegen-units = 1
incremental = false

[profile.release.package.multitest]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
panic = 'abort'
debug = false
debug-assertions = false
